[gd_scene load_steps=50 format=3 uid="uid://dbcbm3t7bx6ve"]

[ext_resource type="Texture2D" uid="uid://bjlrhhn2dpf5a" path="res://assets/sprites/player/Idle.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cqwvc8j58gpoq" path="res://scripts/player.gd" id="1_5pvfp"]
[ext_resource type="Texture2D" uid="uid://bfc023q48mpnk" path="res://assets/sprites/player/Death.png" id="2_jssbp"]
[ext_resource type="Texture2D" uid="uid://cx0q3jcldmyuo" path="res://assets/sprites/player/Attack.png" id="2_nqkij"]
[ext_resource type="Texture2D" uid="uid://eiacoy1xt7wa" path="res://assets/sprites/player/Run.png" id="3_jg13i"]
[ext_resource type="Texture2D" uid="uid://vne23ih0tnuy" path="res://assets/sprites/player/Attack2.png" id="3_xvjlw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_urp6f"]
radius = 7.0
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8wh5m"]
atlas = ExtResource("2_nqkij")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_am6w6"]
atlas = ExtResource("2_nqkij")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axagv"]
atlas = ExtResource("2_nqkij")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cis3c"]
atlas = ExtResource("2_nqkij")
region = Rect2(288, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l5fp"]
atlas = ExtResource("3_xvjlw")
region = Rect2(0, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmuqx"]
atlas = ExtResource("3_xvjlw")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlvyc"]
atlas = ExtResource("3_xvjlw")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8ahy"]
atlas = ExtResource("3_xvjlw")
region = Rect2(288, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjdy6"]
atlas = ExtResource("3_xvjlw")
region = Rect2(384, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hcfg"]
atlas = ExtResource("3_xvjlw")
region = Rect2(480, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qp14"]
atlas = ExtResource("2_jssbp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgtm8"]
atlas = ExtResource("2_jssbp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7muya"]
atlas = ExtResource("2_jssbp")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ns2"]
atlas = ExtResource("2_jssbp")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjy6x"]
atlas = ExtResource("2_jssbp")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7bc3"]
atlas = ExtResource("2_jssbp")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_usqfr"]
atlas = ExtResource("2_jssbp")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhanp"]
atlas = ExtResource("2_jssbp")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_foeld"]
atlas = ExtResource("2_jssbp")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lv6i"]
atlas = ExtResource("2_jssbp")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(288, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jssbp"]
atlas = ExtResource("3_jg13i")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r1sy"]
atlas = ExtResource("3_jg13i")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqkij"]
atlas = ExtResource("3_jg13i")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvjlw"]
atlas = ExtResource("3_jg13i")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh75e"]
atlas = ExtResource("3_jg13i")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkysh"]
atlas = ExtResource("3_jg13i")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvyht"]
atlas = ExtResource("3_jg13i")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_htwuo"]
atlas = ExtResource("3_jg13i")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ecl"]
atlas = ExtResource("3_jg13i")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg3d2"]
atlas = ExtResource("3_jg13i")
region = Rect2(288, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ivps1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wh5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am6w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axagv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cis3c")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l5fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmuqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlvyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8ahy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjdy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hcfg")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qp14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgtm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7muya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ns2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjy6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7bc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usqfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhanp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foeld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lv6i")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jssbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r1sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqkij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvjlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh75e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvyht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htwuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ecl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg3d2")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqkij"]
size = Vector2(32, 42)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_5pvfp")
SPEED = 150.0
JUMP_VELOCITY = -300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -17)
shape = SubResource("CapsuleShape2D_urp6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -24)
sprite_frames = SubResource("SpriteFrames_ivps1")
animation = &"death"
autoplay = "idle"
frame = 9
frame_progress = 1.0

[node name="hit_area_left" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hit_area_left"]
position = Vector2(29, 3)
shape = SubResource("RectangleShape2D_nqkij")
disabled = true

[node name="hit_area_right" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hit_area_right"]
position = Vector2(-30, 3)
shape = SubResource("RectangleShape2D_nqkij")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AnimatedSprite2D/hit_area_left" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/hit_area_right" to="." method="_on_hit_area_body_entered"]
